--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -95,9 +96,14 @@ nav .logo {
   transition: filter 0.5s ease, -webkit-filter 0.5s ease;
 }
 
-h1 {
+.projects {
+  width: 85%;
+  margin: auto;
+}
+
+.projects h1 {
   font-size: 3.5em;
-  width: 45%;
+  width: 900px;
   padding: 90px 0;
   text-align: center;
   -webkit-box-align: center;
@@ -107,173 +113,116 @@ h1 {
   margin-right: auto;
 }
 
-.grid-container {
-  width: 85%;
-  height: 1600px;
-  margin: auto;
+.projects .projects-center {
   display: -ms-grid;
   display: grid;
   grid-gap: 30px;
+  position: relative;
 }
 
-.grid-container .grid-item {
-  overflow: hidden;
-}
-
-.grid-container .item1 {
+.projects .projects-center .project-1 {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  background: url(../images/products/1.png);
-  background-size: cover;
-  background-position: center;
 }
 
-.grid-container .item2 {
+.projects .projects-center .project-2 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  background: url(../images/products/2.png);
-  background-size: cover;
-  background-position: center;
 }
 
-.grid-container .item3 {
+.projects .projects-center .project-3 {
   -ms-grid-column: 4;
   -ms-grid-column-span: 1;
   grid-column: 4/5;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  background: url(../images/products/3.png);
-  background-size: cover;
-  background-position: center;
 }
 
-.grid-container .item4 {
+.projects .projects-center .project-4 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
-  background: url(../images/products/4.png);
-  background-size: cover;
-  background-position: center;
 }
 
-.grid-container .item5 {
+.projects .projects-center .project-5 {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
-  background: url(../images/products/5.png);
-  background-size: cover;
-  background-position: center;
 }
 
-.grid-container .item6 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  background: url(../images/products/6.png);
-  background-size: cover;
-  background-position: center;
+.projects .project {
+  position: relative;
+  background: #CBA25F;
+  margin-bottom: 2rem;
+  height: 100%;
 }
 
-.grid-container .item7 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  background: url(../images/products/7.png);
-  background-size: cover;
-  background-position: center;
+.projects .project .project-info {
+  width: 80%;
+  text-align: center;
+  color: #FFFFFF;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.grid-container .item8 {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  background: url(../images/products/9.png);
-  background-size: cover;
-  background-position: center;
+.projects .project .project-info h4 {
+  margin-bottom: 12px;
+  font-size: 1.5em;
 }
 
-.grid-container .item9 {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 1;
-  grid-column: 4/5;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  background: url(../images/products/9.png);
-  background-size: cover;
-  background-position: center;
+.projects .project .project-info p {
+  margin-bottom: 25px;
+  font-size: 1.1em;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.grid-container .item10 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  background: url(../images/products/10.png);
-  background-size: cover;
-  background-position: center;
+.projects .project .project-img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
-.grid-container .item11 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  background: url(../images/products/11.png);
-  background-size: cover;
-  background-position: center;
+.projects .project:hover .project-info {
+  opacity: 1;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
-.grid-container .item12 {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  background: url(../images/products/12.png);
-  background-size: cover;
-  background-position: center;
-}
-
-.grid-container .item13 {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 1;
-  grid-column: 4/5;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  background: url(../images/products/13.png);
-  background-size: cover;
-  background-position: center;
+.projects .project:hover .project-img {
+  opacity: 0.1;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .footer {
