--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 
 * {
     padding: 0;
@@ -85,122 +86,97 @@ nav {
     }
 }
 
-h1 {
-    font-size: 3.5em;
-    width: 45%;
-    padding: 90px 0;
-    text-align: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.grid-container {
+.projects {
     width: 85%;
-    height: 1600px;
     margin: auto;
-    display: grid;
-    grid-gap: 30px;
 
-    .grid-item {
-        overflow: hidden;
-    }
-
-    .item1 {
-        grid-column: 1/2;
-        grid-row: 1/3;
-        background: url(../images/products/1.png);
-        background-size: cover;
-        background-position: center;
+    h1 {
+        font-size: 3.5em;
+        width: 900px;
+        padding: 90px 0;
+        text-align: center;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    .item2 {
-        grid-column: 2/4;
-        grid-row: 1/2;
-        background: url(../images/products/2.png);
-        background-size: cover;
-        background-position: center;
-    }
-      
-    .item3 {
-        grid-column: 4/5;
-        grid-row: 1/3;
-        background: url(../images/products/3.png);
-        background-size: cover;
-        background-position: center;
-    }
+    .projects-center {
+        display: grid;
+        grid-gap: 30px;
+        position: relative;
 
-    .item4 {
-        grid-column: 2/3;
-        grid-row: 2/3;
-        background: url(../images/products/4.png);
-        background-size: cover;
-        background-position: center;
+        .project-1 {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+        .project-2 {
+            grid-column: 2/4;
+            grid-row: 1/2;
+        }
+        .project-3 {
+            grid-column: 4/5;
+            grid-row: 1/3;
+        }
+        .project-4 {
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+        .project-5 {
+            grid-column: 3/4;
+            grid-row: 2/3; 
+        }
     }
+    
+    .project {
+        position: relative;
+        background: #CBA25F;
+        margin-bottom: 2rem;
+        height: 100%;
 
-    .item5 {
-        grid-column: 3/4;
-        grid-row: 2/3;
-        background: url(../images/products/5.png);
-        background-size: cover;
-        background-position: center;
-    }
+        .project-info {
+            width: 80%;
+            text-align: center;
+            color: #FFFFFF;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: 0.3s ease;
+            display: flex;
+            flex-direction: column;
 
-    .item6 {
-        grid-column: 1/2;
-        grid-row: 3/4;
-        background: url(../images/products/6.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item7 {
-        grid-column: 2/3;
-        grid-row: 3/4;
-        background: url(../images/products/7.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item8 {
-        grid-column: 3/4;
-        grid-row: 3/4;
-        background: url(../images/products/9.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item9 {
-        grid-column: 4/5;
-        grid-row: 3/4;
-        background: url(../images/products/9.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item10 {
-        grid-column: 1/2;
-        grid-row: 4/5;
-        background: url(../images/products/10.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item11 {
-        grid-column: 2/3;
-        grid-row: 4/5;
-        background: url(../images/products/11.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item12 {
-        grid-column: 3/4;
-        grid-row: 4/5;
-        background: url(../images/products/12.png);
-        background-size: cover;
-        background-position: center;
-    }
-    .item13 {
-        grid-column: 4/5;
-        grid-row: 4/5;
-        background: url(../images/products/13.png);
-        background-size: cover;
-        background-position: center;
+            h4 {
+                margin-bottom: 12px;
+                font-size: 1.5em;
+            }
+
+            p {
+                margin-bottom: 25px;
+                font-size: 1.1em;
+                font-family: 'Montserrat', sans-serif;
+            }
+        }
+
+        .project-img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+            transition: 0.3s ease;
+        }
+
+        &:hover {
+
+            .project-info {
+                opacity: 1;
+                transition: 0.3s ease;
+            }
+
+            .project-img {
+                opacity: 0.1;
+                transition: 0.3s ease;
+            }
+        }
     }
 }
 
