--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ nav .social-header ul {
 }
 
 nav .social-header ul li a {
-  padding-right: 37px;
+  margin-right: 37px;
 }
 
 nav .social-header ul li a img {
@@ -127,6 +127,7 @@ nav .logo {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
+  height: 100%;
 }
 
 .projects .projects-center .project-2 {
@@ -136,6 +137,7 @@ nav .logo {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
+  height: 100%;
 }
 
 .projects .projects-center .project-3 {
@@ -145,6 +147,7 @@ nav .logo {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
+  height: 100%;
 }
 
 .projects .projects-center .project-4 {
@@ -154,6 +157,7 @@ nav .logo {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
+  height: 100%;
 }
 
 .projects .projects-center .project-5 {
@@ -163,6 +167,39 @@ nav .logo {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
+  height: 100%;
+}
+
+.projects .projects-center .project-6 {
+  height: 100%;
+}
+
+.projects .projects-center .project-7 {
+  height: 100%;
+}
+
+.projects .projects-center .project-8 {
+  height: 100%;
+}
+
+.projects .projects-center .project-9 {
+  height: 100%;
+}
+
+.projects .projects-center .project-10 {
+  height: 100%;
+}
+
+.projects .projects-center .project-11 {
+  height: 100%;
+}
+
+.projects .projects-center .project-12 {
+  height: 100%;
+}
+
+.projects .projects-center .project-13 {
+  height: 100%;
 }
 
 .projects .project {
@@ -202,6 +239,11 @@ nav .logo {
   margin-bottom: 25px;
   font-size: 1.1em;
   font-family: 'Montserrat', sans-serif;
+}
+
+.projects .project .project-info img {
+  width: 27px;
+  margin: auto;
 }
 
 .projects .project .project-img {
