--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@ nav {
             li {
 
                 a {
-                    padding-right: 37px;
+                    margin-right: 37px;
 
                     img {
                         transition: 0.2s ease;
@@ -108,22 +108,51 @@ nav {
         .project-1 {
             grid-column: 1/2;
             grid-row: 1/3;
+            height: 100%;
         }
         .project-2 {
             grid-column: 2/4;
             grid-row: 1/2;
+            height: 100%;
         }
         .project-3 {
             grid-column: 4/5;
             grid-row: 1/3;
+            height: 100%;
         }
         .project-4 {
             grid-column: 2/3;
             grid-row: 2/3;
+            height: 100%;
         }
         .project-5 {
             grid-column: 3/4;
             grid-row: 2/3; 
+            height: 100%;
+        }
+        .project-6 {
+            height: 100%;
+        }
+        .project-7 {
+            height: 100%;
+        }
+        .project-8 {
+            height: 100%;
+        }
+        .project-9 {
+            height: 100%;
+        }
+        .project-10 {
+            height: 100%;
+        }
+        .project-11 {
+            height: 100%;
+        }
+        .project-12 {
+            height: 100%;
+        }
+        .project-13 {
+            height: 100%;
         }
     }
     
@@ -155,6 +184,11 @@ nav {
                 margin-bottom: 25px;
                 font-size: 1.1em;
                 font-family: 'Montserrat', sans-serif;
+            }
+
+            img {
+                width: 27px;
+                margin: auto;
             }
         }
 
