Adding some changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,305 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
+.footer {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  margin-top: 90px;
+  padding: 17px 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #000000;
+}
+
+.footer .info-footer {
+  color: white;
+}
+
+.footer .footer-logo {
+  height: 100%;
+}
+
+.footer .footer-logo img {
+  height: 100%;
+}
+
+.footer .social-footer ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer .social-footer ul li {
+  padding-left: 37px;
+}
+
+.footer .social-footer ul li img {
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+
+.footer .social-footer ul li img:hover {
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
+.filters {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.filters .category-filter {
+  cursor: pointer;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 90px;
+  padding-bottom: 20px;
+}
+
+.filters .category-filter p {
+  margin-right: 10px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.filters .category-filter img {
+  width: 6px;
+  height: auto;
+}
+
+.filters .category-filter .select-filters {
+  position: absolute;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 3px 6px #D6D6D6;
+          box-shadow: 0px 3px 6px #D6D6D6;
+  padding: 12px 9px;
+  top: 42px;
+  left: 0;
+  min-width: 160px;
+  z-index: 1;
+  display: none;
+}
+
+.filters .category-filter .select-filters label {
+  font-family: 'Montserrat', sans-serif;
+  color: #565656;
+  font-size: 1em;
+}
+
+.filters .category-filter .select-filters input[type=checkbox] + label {
+  display: block;
+}
+
+.filters .category-filter .select-filters input[type=checkbox] {
+  display: none;
+}
+
+.filters .category-filter .select-filters input[type=checkbox] + label:before {
+  content: "\2714";
+  border: 2px solid #969696;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  margin: 7px 10px 7px 0;
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
+  color: transparent;
+}
+
+.filters .category-filter .select-filters input[type=checkbox]:checked + label:before {
+  color: #969696;
+  border: 2px solid #FFFFFF;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.filters .category-filter:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  height: 2px;
+  background: #000000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: .25s linear;
+  transition: .25s linear;
+}
+
+.filters .category-filter:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.filters .category-filter:hover .select-filters {
+  display: initial;
+}
+
+.line {
+  height: 1px;
+  background: #D1D1D1;
+}
+
+.added-filters {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin: 20px 0;
+}
+
+.added-filters .added-filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 20px;
+}
+
+.added-filters .added-filter img {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.added-filters .added-filter p {
+  font-family: 'Montserrat', sans-serif;
+  color: #565656;
+  font-size: 1em;
+}
+
+.projects .back-to-work {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150px;
+  text-decoration: none;
+  color: #000000;
+  margin-top: 60px;
+  margin-bottom: -30px;
+}
+
+.projects .back-to-work img {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  margin-right: 12px;
+}
+
+.projects .project-image {
+  width: 100%;
+  height: 770px;
+  margin-bottom: 50px;
+}
+
+.projects .product-description {
+  width: 860px;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.projects .product-description h5 {
+  font-size: 1.5em;
+}
+
+.projects .product-description p {
+  font-size: 1.1em;
+  font-family: 'Montserrat', sans-serif;
+  margin: 15px 0px;
+  text-align: justify;
+}
+
+.projects .video {
+  width: 100%;
+  background-color: #DDDDDD;
+  height: 770px;
+  position: relative;
+}
+
+.projects .video img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 100px;
+}
+
+.projects .back-to-work-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 50px;
+}
+
+.projects .back-to-work-bottom .back-to-work-under {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 150px;
+  text-decoration: none;
+  color: #000000;
+}
+
+.projects .back-to-work-bottom .back-to-work-under img {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  margin-right: 12px;
+}
+
+.projects .back-to-work-bottom .share {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projects .back-to-work-bottom .share p {
+  font-size: 1em;
+}
+
+.projects .back-to-work-bottom .share a {
+  margin-left: 37px;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -69,7 +369,7 @@ nav .nav-menu ul li a:before {
   position: absolute;
   width: 100%;
   top: 1.3em;
-  height: 1px;
+  height: 2px;
   background: #000000;
   visibility: hidden;
   -webkit-transform: scaleX(0);
@@ -79,6 +379,18 @@ nav .nav-menu ul li a:before {
 }
 
 nav .nav-menu ul li a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+nav .nav-menu ul li .menu-active:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 1.3em;
+  height: 2px;
+  background: #000000;
   visibility: visible;
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
@@ -104,13 +416,20 @@ nav .logo {
 .projects h1 {
   font-size: 3.5em;
   width: 900px;
-  padding: 90px 0;
+  margin: 82px 0;
   text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin-left: auto;
   margin-right: auto;
+}
+
+.projects .h1-work {
+  text-align: left;
+  width: auto;
+  padding: 0;
+  margin: 82px 0 50px 0;
 }
 
 .projects .projects-center {
@@ -265,58 +584,5 @@ nav .logo {
   opacity: 0.1;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-}
-
-.footer {
-  position: relative;
-  width: 100%;
-  height: 80px;
-  margin-top: 90px;
-  padding: 17px 34px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #000000;
-}
-
-.footer .info-footer {
-  color: white;
-}
-
-.footer .footer-logo {
-  height: 100%;
-}
-
-.footer .footer-logo img {
-  height: 100%;
-}
-
-.footer .social-footer ul {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer .social-footer ul li {
-  padding-left: 37px;
-}
-
-.footer .social-footer ul li img {
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
-}
-
-.footer .social-footer ul li img:hover {
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
-  -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
 }
 /*# sourceMappingURL=styles.css.map */
