--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import "footer";
+@import "work";
+@import "project";
+@import "contact";
 
 * {
     padding: 0;
@@ -8,6 +12,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
+// This is the navigation
 nav {
     position: relative;
     width: 85%;
@@ -59,7 +64,7 @@ nav {
                         position: absolute;
                         width: 100%;
                         top: 1.3em;
-                        height: 1px;
+                        height: 2px;
                         background: #000000;
                         visibility: hidden;
                         transform: scaleX(0);
@@ -71,6 +76,20 @@ nav {
                             visibility: visible;
                             transform: scaleX(1);
                         }
+                    }
+                }
+
+                .menu-active {
+
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        top: 1.3em;
+                        height: 2px;
+                        background: #000000;
+                        visibility: visible;
+                        transform: scaleX(1);
                     }
                 }
             }
@@ -86,6 +105,7 @@ nav {
     }
 }
 
+// These are the styles for the Home and Work pages (grid area only!)
 .projects {
     width: 85%;
     margin: auto;
@@ -93,11 +113,18 @@ nav {
     h1 {
         font-size: 3.5em;
         width: 900px;
-        padding: 90px 0;
+        margin: 82px 0;
         text-align: center;
         align-items: center;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .h1-work {
+        text-align: left;
+        width: auto;
+        padding: 0;
+        margin: 82px 0 50px 0;
     }
 
     .projects-center {
@@ -214,46 +241,4 @@ nav {
     }
 }
 
-.footer {
-    position: relative;
-    width: 100%;
-    height: 80px;
-    margin-top: 90px;
-    padding: 17px 34px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #000000;
-
-    .info-footer {
-        color: white;
-    }
-
-    .footer-logo {
-        height: 100%;
-
-        img {
-            height: 100%;
-        }
-    }
-
-    .social-footer {
-
-        ul {
-            list-style: none;
-            display: flex;
-
-            li {
-                padding-left: 37px;
-
-                img {
-                    transition: 0.2s ease;
-                    &:hover {
-                        transition: 0.2s ease;
-                        transform: translateY(-3px);
-                    }
-                }
-            }
-        }
-    }
-}
+// This is the footer
