--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -15,10 +15,19 @@
         }
     }
 
+    .detail-content {
+        display: flex;
+        flex-direction: column;
+    }
+
     .project-image {
-        width: 100%;
-        height: 770px;
+        width: 860px;
+        margin: auto;
         margin-bottom: 50px;
+
+        &:nth-child(1) {
+            width: 100%;
+        }
     }
 
     .product-description {
@@ -34,23 +43,13 @@
             font-size: 1.1em;
             font-family: 'Montserrat', sans-serif;
             margin: 15px 0px;
-            text-align: justify;
         }
     }
 
     .video {
-        width: 100%;
-        background-color: #DDDDDD;
-        height: 770px;
-        position: relative;
-
-        img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 100px;
-        }
+        width: 860px;
+        height: 484px;
+        margin: auto;
     }
 
     .back-to-work-bottom {
@@ -88,4 +87,22 @@
             }
         }
     }
+}
+
+@media (max-width: 1042px) {
+
+.projects {
+    .project-image {
+        width: 100%;
+    }
+    
+    .product-description {
+        width: 100%;
+    }
+
+    .video {
+        width: 100%;
+    }
+}
+
 }
