--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,10 +205,24 @@
   margin-right: 12px;
 }
 
+.projects .detail-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .projects .project-image {
-  width: 100%;
-  height: 770px;
+  width: 860px;
+  margin: auto;
   margin-bottom: 50px;
+}
+
+.projects .project-image:nth-child(1) {
+  width: 100%;
 }
 
 .projects .product-description {
@@ -225,23 +239,12 @@
   font-size: 1.1em;
   font-family: 'Montserrat', sans-serif;
   margin: 15px 0px;
-  text-align: justify;
 }
 
 .projects .video {
-  width: 100%;
-  background-color: #DDDDDD;
-  height: 770px;
-  position: relative;
-}
-
-.projects .video img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 100px;
+  width: 860px;
+  height: 484px;
+  margin: auto;
 }
 
 .projects .back-to-work-bottom {
@@ -300,6 +303,131 @@
   margin-left: 37px;
 }
 
+@media (max-width: 1042px) {
+  .projects .project-image {
+    width: 100%;
+  }
+  .projects .product-description {
+    width: 100%;
+  }
+  .projects .video {
+    width: 100%;
+  }
+}
+
+.projects .meet-us {
+  width: 860px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.1em;
+  margin-top: -15px;
+}
+
+.projects .us {
+  margin-top: 55px;
+}
+
+.projects .us .dragos, .projects .us .teo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.projects .us .dragos .mypicture, .projects .us .teo .mypicture {
+  width: 474px;
+  height: auto;
+  margin-right: 50px;
+  margin-bottom: 50px;
+}
+
+.projects .us .dragos .mypicture img, .projects .us .teo .mypicture img {
+  min-height: 300px;
+  min-width: 300px;
+}
+
+.projects .us .dragos .about-me, .projects .us .teo .about-me {
+  -webkit-transform: translateY(-15%);
+          transform: translateY(-15%);
+}
+
+.projects .us .dragos img, .projects .us .teo img {
+  width: 100%;
+  height: 100%;
+}
+
+.projects .us .dragos h2, .projects .us .teo h2 {
+  font-size: 3em;
+  margin-bottom: 13px;
+}
+
+.projects .us .dragos h5, .projects .us .teo h5 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.projects .us .dragos p, .projects .us .teo p {
+  font-size: 1.1em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.projects .us .dragos .about-me, .projects .us .teo .about-me {
+  max-width: 860px;
+}
+
+.projects .where h3 {
+  font-size: 2.3em;
+  margin-top: 50px;
+}
+
+.projects .where .platforms {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.projects .where .platforms h5 {
+  font-size: 1.25em;
+  margin-bottom: 20px;
+}
+
+.projects .where .platforms .platform {
+  margin-top: 40px;
+  margin-right: 80px;
+}
+
+.projects .where .platforms .platform a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  font-size: 0.9em;
+  color: #000000;
+}
+
+.projects .where .platforms .platform a img {
+  margin-right: 20px;
+}
+
+@media (max-width: 1042px) {
+  .projects .meet-us {
+    width: 100%;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -311,7 +439,7 @@
 nav {
   position: relative;
   width: 85%;
-  height: 200px;
+  height: 10.5vw;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -357,7 +485,7 @@ nav .nav-menu ul {
 nav .nav-menu ul li a {
   text-decoration: none;
   color: #000000;
-  margin-left: 37px;
+  margin-left: 2vw;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
   position: relative;
@@ -406,6 +534,15 @@ nav .logo {
   transition: -webkit-filter 0.5s ease;
   transition: filter 0.5s ease;
   transition: filter 0.5s ease, -webkit-filter 0.5s ease;
+  width: 10vw;
+  height: 10vw;
+  min-width: 110px;
+  min-height: 110px;
+}
+
+nav .logo img {
+  width: 100%;
+  height: 100%;
 }
 
 .projects {
@@ -415,7 +552,7 @@ nav .logo {
 
 .projects h1 {
   font-size: 3.5em;
-  width: 900px;
+  width: 860px;
   margin: 82px 0;
   text-align: center;
   -webkit-box-align: center;
@@ -584,5 +721,14 @@ nav .logo {
   opacity: 0.1;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+}
+
+@media (max-width: 1240px) {
+  .projects .project .project-info h4 {
+    font-size: 1.3em;
+  }
+  .projects .project .project-info p {
+    font-size: 0.9em;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
