--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,8 @@
 @import "project";
 @import "contact";
 
+
+
 * {
     padding: 0;
     margin: 0;
@@ -16,7 +18,7 @@
 nav {
     position: relative;
     width: 85%;
-    height: 200px;
+    height: 10.5vw;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -54,7 +56,7 @@ nav {
                 a {
                     text-decoration: none;
                     color: #000000;
-                    margin-left: 37px;
+                    margin-left: 2vw;
                     transition: 0.2s ease;
                     position: relative;
                     font-size: 1.25em;
@@ -102,6 +104,15 @@ nav {
         left: 50%;
         transform: translateX(-50%);
         transition: filter 0.5s ease;
+        width: 10vw;
+        height: 10vw;
+        min-width: 110px;
+        min-height: 110px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
@@ -112,7 +123,7 @@ nav {
 
     h1 {
         font-size: 3.5em;
-        width: 900px;
+        width: 860px;
         margin: 82px 0;
         text-align: center;
         align-items: center;
@@ -241,4 +252,4 @@ nav {
     }
 }
 
-// This is the footer
+@import "styles-mobile";
