--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -4,6 +4,7 @@
         font-family: 'Montserrat', sans-serif;
         font-size: 1.1em;
         margin-top: -15px;
+        line-height: 1.5em;
     }
 
     .us {
@@ -48,6 +49,7 @@
             p {
                 font-size: 1.1em;
                 font-family: 'Montserrat', sans-serif;
+                line-height: 1.5em;
             }
 
             .about-me {
@@ -89,6 +91,122 @@
                 }
             }
         }
+    }
+}
+
+.contact-form {
+    width: 100%;
+    padding: 20px 0;
+    margin-top: 50px;
+    background: #F3F3F3;
+
+    .contact-container {
+        width: 65%;
+        margin: auto;
+    }
+
+    h3 {
+        width: 100%;
+        font-size: 2.3em;
+        text-align: center;
+        margin-top: 45px;
+        margin-bottom: 10px;
+    }
+
+    .row100 {
+        position: relative;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .col {
+            position: relative;
+            width: 100%;
+            padding-right: 37px;
+            margin-bottom: 1em;
+            margin-top: 1em;
+            transition: 0.5s;
+
+            &:nth-child(3) {
+                padding-right: 0;
+            }
+        }
+
+        .textarea-col {
+            padding-right: 0;
+        }
+
+        .submit {
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            padding-right: 0;
+        }
+
+        .inputBox {
+            position: relative;
+            width: 100%;
+            height: 1.5em;
+
+            input,
+            &.textarea textarea {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: transparent;
+                box-shadow: none;
+                border-top: none;
+                border-left: none;
+                border-right: none;
+                border-bottom: 2px solid #414141;
+                outline: none;
+                font-size: 0.9em;
+                z-index: 1;
+                
+                &:focus + .text, 
+                &:valid + .text {
+                    top: -1.5em;
+                    font-size: 70%;
+                }
+            }
+
+            .text {
+                position: absolute;
+                top: 0;
+                left: 0;
+                line-height: 1.5em;
+                font-size: 0.85em;
+                display: block;
+                transition: 0.5s;
+                pointer-events: none;
+                z-index: 1;
+            }
+
+            &.textarea {
+                position: relative;
+                width: 100%;
+                height: 3.5em;
+
+                textarea {
+                    max-height: 5.5em;
+                    min-height: 1.5em;
+                    max-width: 100%;
+                    min-width: 100%;
+                }
+            }
+        }
+    }
+
+    input[type="submit"] {
+        border: 1px solid #000000;
+        padding: 10px 51px;
+        border-radius: 50px;
+        cursor: pointer;
+        outline: none;
+        background: #F3F3F3;
+        font-size: 0.85em;
+        margin-bottom: 30px;
     }
 }
 
