--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -43,6 +43,7 @@
             font-size: 1.1em;
             font-family: 'Montserrat', sans-serif;
             margin: 15px 0px;
+            line-height: 1.5em;
         }
     }
 
