--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -17,14 +17,10 @@
 
             .mypicture {
                 width: 474px;
+                min-width: 300px;
                 height: auto;
                 margin-right: 50px;
                 margin-bottom: 50px;
-
-                img {
-                    min-height: 300px;
-                    min-width: 300px;
-                }
             }
 
             .about-me {
@@ -110,22 +106,19 @@
         font-size: 2.3em;
         text-align: center;
         margin-top: 45px;
-        margin-bottom: 10px;
+        margin-bottom: 34px;
     }
 
     .row100 {
         position: relative;
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        grid-gap: 37px;
 
         .col {
             position: relative;
             width: 100%;
-            padding-right: 37px;
-            margin-bottom: 1em;
-            margin-top: 1em;
             transition: 0.5s;
 
             &:nth-child(3) {
@@ -134,7 +127,8 @@
         }
 
         .textarea-col {
-            padding-right: 0;
+            margin-bottom: 24px;
+            margin-top: 37px;
         }
 
         .submit {
@@ -207,15 +201,105 @@
         background: #F3F3F3;
         font-size: 0.85em;
         margin-bottom: 30px;
+
+        &:hover {
+            background-color: #000000;
+            color: #F3F3F3;
+        }
     }
 }
 
-@media (max-width: 1042px) {
+@media (max-width: 1024px) {
 
-    .projects {
-        .meet-us {
-            width: 100%;
+.projects {
+    .meet-us {
+        width: 100%;
+        font-size: 1em;
+    }
+
+    .us {
+        margin-top: 35px;
+
+        .dragos, .teo {
+            margin-top: 50px;
+            h2 {
+                font-size: 1.7em;
+            }
+
+            h5 {
+                font-size: 1.3em;
+            }
+
+            p {
+                font-size: 1em;
+            }
         }
     }
-    
+
+    .where {
+        h3 {
+            font-size: 1.7em;
+        }
     }
+}
+
+}
+
+@media (max-width: 777px) {
+
+.projects {
+    .us {
+        .dragos, .teo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            .mypicture {
+                width: 50%;
+                min-width: 250px;
+                margin-right: 0;
+                margin-bottom: 50px;
+            }
+
+            .about-me {
+                transform: translateY(0%);
+            }
+        }
+    }
+
+    .where {
+        h3 {
+            text-align: center;
+        }
+
+        .platforms {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            h5 {
+                text-align: center;
+            }
+
+            .platform {
+                margin-top: 40px;
+                margin-right: 0px;
+                
+                a {
+                    display: flex;
+                    flex-wrap: nowrap;
+                    font-size: 0.9em;
+                    color: #000000;
+
+                    img {
+                        margin-right: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+}
