update filters - work in progrss

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -584,10 +584,29 @@ nav .logo img {
   display: none;
 }
 
-.filters .category-filter .select-filters label {
+.filters .category-filter .select-filters .label {
   font-family: 'Montserrat', sans-serif;
   color: #565656;
   font-size: 1em;
+}
+
+.filters .category-filter .select-filters .label:before {
+  content: "\2714";
+  border: 1px solid #969696;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  margin: 7px 10px 7px 0;
+  -webkit-transform: translateY(6px);
+          transform: translateY(6px);
+  color: transparent;
+}
+
+.filters .category-filter .select-filters .label.checked:before {
+  color: #969696;
+  border: 1px solid #FFFFFF;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .filters .category-filter .select-filters input[type=checkbox] + label {
@@ -657,7 +676,6 @@ nav .logo img {
 }
 
 .added-filters .added-filter {
-  display: none;
   margin-right: 37px;
 }
 
