--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -120,7 +120,11 @@
     margin: 20px 0;
 
     .added-filter {
-        margin-right: 37px;
+        margin: 5px;
+        margin-right: 10px;
+        display: flex;
+        align-items: center;
+        
 
         img {
             margin-right: 7px;
