--- a/styles/styles.css
+++ b/styles/styles.css
@@ -676,7 +676,14 @@ nav .logo img {
 }
 
 .added-filters .added-filter {
-  margin-right: 37px;
+  margin: 5px;
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .added-filters .added-filter img {
